--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -19,6 +19,9 @@ color:#FFFFFF;
 .bg-skyblue{
 	background:#18bc9C;
 }
+.bg-footer{
+	background: #233140;
+}
 .nav > li > a:hover{
 	background: #000033;
 	color:white;
@@ -102,5 +105,29 @@ h2{
 .btn{
 	color:;
 }
-
-
+footer{
+font-family: Montserrat,Arial,sans-serif;	
+}
+h3{
+	font-size: 15px;
+	font-weight: bold;
+}
+.btn-social {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 35px;
+}
+.list-inline li{
+padding: 0 5px!important;
+}
+.rowfooter{
+	padding: 30px 0;
+}
+footer .footer-below {
+    padding: 10px 0;
+}
