Corrección fondo menú responsivo

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -26,6 +26,9 @@ color:#FFFFFF;
 	background: #233140;
 	color:white;
 }
+#bs-example-navbar-collapse-1{
+	background: #2c3e50;
+}
 
 .superstar{
 	padding-top:200px;
