--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -96,7 +96,7 @@ h2{
     font-size: 20px;
     color: #fff;
 }
-#about, #portfolio{
+#about, #portfolio, #contact{
 	padding: 50px 0;
 }
 .btn-outline {
